# BGD-ETL-VectorDB

./: .dockerignore  .gitignore  DELIVERABLES.md  Data_Product_Card_arXiv_RAG_s24815.docx  Dockerfile  README.md  data_product_contract.yaml  docker-compose.yml  justfile  pyproject.toml
benchmark/: benchmark.py  test_set.json
core/: arxiv_client.py  config.py  consumer.py  db.py  producer.py  streamer.py  watcher.py
pipeline/: bronze.py  cleaning.py  embedding.py  gold.py  silver.py
scripts/: split_jsonl.py
sql/: 00_init.sql  01_streaming_state.sql
tests/: conftest.py  test_arxiv_client_unit.py  test_cleaning_unit.py  test_embedding_unit.py  test_streamer_e2e.py  test_streamer_integration.py  test_streamer_unit.py  test_watcher_unit.py
webui/: app.py
